<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="label_new_task">Jogo</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_data">Data</string>
    <string name="label_hora">Hora</string>
    <string name="label_cancelar">cancelar</string>
    <string name="label_salvar_jogo">SALVAR JOGO</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_descricao_botao">Novo jogo</string>
    <string name="label_edit">Editar</string>
</resources>