<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Agendar Jogo "
        app:navigationIcon="@drawable/ic_voltar"
        />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"/>


    //------------------ JOGO -----------------
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jogo"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_new_task"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                       />



    </com.google.android.material.textfield.TextInputLayout>


    //-------------descrição------------------

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descricao"
        app:layout_constraintTop_toBottomOf="@id/jogo"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_descricao"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="148dp"


            />
    </com.google.android.material.textfield.TextInputLayout>

    //-------- DATA --------------------------------

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/descricao"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/hora"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_data"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"
        />
    </com.google.android.material.textfield.TextInputLayout>

//------------------ HORARIO ------------------------

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hora"
        app:layout_constraintTop_toTopOf="@id/data"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_horario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_hora"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    //---------------------bt_Cancelar------------------------------------

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/label_cancelar"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    //----------------------BT --------------------------------------

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_salvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/label_salvar_jogo"
        android:layout_marginBottom="64dp"
        android:background="#0F2D9C"
        style="@style/Widget.MaterialComponents.Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>